tests/ui/unknown_annotation.stderr
error: Unknown annotation '@respons'
       help: did you mean '@response'?
       note: valid annotations are @tag, @security, @id, @hidden
  --> tests/ui/unknown_annotation.rs:10:1
   |
10 | /// @respons typo_annotation
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
